--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # Backend API base URL (Nest server)
-VITE_API_URL=http://localhost:3000
+VITE_API_URL=https://digitallogistics-backend.onrender.com
