--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 # Backend API base URL (Nest server)
 VITE_API_URL=https://digitallogistics-backend.onrender.com
+VITE_SOCKET_URL=http://localhost:3000/chat
+
