--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^12.24.0",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.562.0",
     "motion": "^12.29.0",
     "react": "^19.2.0",
